# mcguffin

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEMAND.md  DEVELOPMENT.md  Dockerfile  GUIDE.md  LICENSE  NOTIFICATION_PLAN.md  PLUGIN_DEV.md  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  mcguffin_data.db  mcguffin_data.db-shm  mcguffin_data.db-wal  nohup.out  restart.sh
.github/workflows/: docker.yml  release.yml  test.yml
backups/: pre_restore_20260611_225153.db  uploaded_20260611_225153_mcguffin_data_20260606_112549.db
docs/: README.md
docs/admin/: backups.md  contests.md  overview.md  plugins.md  users.md
docs/guide/: configuration.md  deployment.md  development.md  quick-start.md
mcguffin-web/: index.html  package.json
server/: Cargo.toml  fix_discussions.py  fix_prefix.py  mcguffin_data.db  mcguffin_data.db-shm  mcguffin_data.db-wal
server/migrations/: 20250101000001_initial.sql  20250715000001_plugin_data.sql
server/src/: admin.rs  announcements.rs  auth.rs  community.rs  contests.rs  db.rs  discussions.rs  info.rs  lib.rs  main.rs  notifications.rs  pages.rs  problems.rs  routes.rs  state.rs  suggestions.rs  team.rs  types.rs  user.rs  utils.rs
server/src/domain/: admin.rs  config.rs  contest.rs  mod.rs  notification.rs  oauth.rs  permission.rs  post.rs  problem.rs  site.rs  team.rs  user.rs
server/src/handlers/: auth.rs  contest.rs  info.rs  mod.rs  plugin.rs  plugin_call.rs  plugin_data.rs  plugin_files.rs  post.rs  problem.rs
server/src/handlers/admin/: acl.rs  audit.rs  backup.rs  config.rs  export.rs  groups.rs  mod.rs  showcase.rs  users.rs
server/src/infra/: backup.rs  config.rs  mod.rs  persistence.rs
server/src/plugin/: host.rs  manager.rs  mod.rs  trait_.rs
server/src/plugin/builtins/: mod.rs  system_info.rs
server/tests/: api.rs
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
(+139 files in other folders)
