[package]
name = "mcguffin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
toml = "0.8"
toml_edit = "0.22"

[lib]
name = "mcguffin_server_lib"
path = "src/lib.rs"

[[bin]]
name = "mcguffin-server"
path = "src/main.rs"

[[bin]]
name = "mcguffin"
path = "src/bin/mcguffin.rs"