[package]
name = "mcguffin-server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "mime_guess"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.11"
reqwest = { version = "0.13", features = ["json"] }
once_cell = "1"
toml = "1.1"
toml_edit = "0.25"
bcrypt = "0.19"
clap = { version = "4", features = ["derive"] }

# SQLite storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
rusqlite = { version = "0.32", features = ["backup", "bundled"] }

# WASM plugin runtime
wasmtime = "28"
[lib]
name = "mcguffin_server_lib"
path = "src/lib.rs"

[[bin]]
name = "mcguffin-server"
path = "src/main.rs"

[[bin]]
name = "mcguffin"
path = "src/bin/mcguffin.rs"
